Wall jumping, health bar, physics bug fix
Characters can now jump when directly next to a wall either side.

Basic health bar implemented.

Fixed physics bug as a result of optimising entity tick (was assigning
to x and y instead of state.x and state.y).

--- a/client/layout.css
+++ b/client/layout.css
@@ -32,6 +32,7 @@ input[type=text]{padding:0 2px;}
     margin-top: -180px; /* Negative half of height. */
 }
 #debug{
+    display:none;
     position:absolute;
     top:0;left:0px;
     padding:0 4px;
